# kari.hpp

./: .appveyor.yml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  appveyor.yml  catch_main.cpp  circle.yml  kari.hpp  kari_tests.cpp  tests.cpp
.github/workflows/: darwin.yml  linux.yml
cmake/: Config.cmake.in  config.cmake.in
headers/: .clangd
headers/kari.hpp/: kari.hpp  kari_ext.hpp
headers/kari_hpp/: kari.hpp
scripts/: upload_coverage.sh
tests/: tests.cpp
untests/: CMakeLists.txt  catch_main.cpp  kari_examples.cpp  kari_ext_tests.cpp  kari_tests.cpp  kari_tests.hpp
untests/doctest/: doctest.hpp
vendors/: CMakeLists.txt
